NRPT-184: Fix navbar menu toggle spacing

--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -28,7 +28,7 @@ header {
 
 .navbar-toggler {
     margin-top: 0.65rem;
-    margin-right: -0.5rem;
+    margin-right: 1rem;
     padding: 0.5rem 0.4rem;
     border: 2px solid $gold;
     color: $gold;
